fixed ref in cap4, beautify cap 7

--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -12,9 +12,21 @@
 \url{https://www.la7.it/piazzapulita/video/la-mia-casa-postata-online-alcune-considerazioni-leditoriale-di-corrado-formigli-12-12-2019-298369}
 
 \bibitem{MalandrinoScarano}
-Delfina Malandrino e Vittorio Scarano
+Delfina Malandrino e Vittorio Scarano\newline
 \textit{Privacy leakage on the Web: Diffusion and countermeasures}\newline
 Computer Networks 57.14, 2013
+
+\bibitem{quasiID}
+Latanya Sweeney\newline
+\textit{Simple demographics often identify people uniquely}\newline
+(San Francisco) 671, 2000, pp 1-34
+
+\bibitem{kAnonimity}
+Pierangela Samarati, Latanya Sweeney\newline
+\textit{Generalizing data to provide anonymity when disclosing information}\newline
+PODS Vol. 98 10.1145. Citeseer. 1998, pp. 275487–275508.
+
+
 
 \bibitem{looseTweets} 
 Huina Mao, Xin Shuaiand Apu Kapadia.\newline
