--- a/capitolo5.tex
+++ b/capitolo5.tex
@@ -21,7 +21,7 @@ L'interazione che un utente ha con Knoxly avviene nel seguente modo:
     \item L'utente digita un testo $t$;
     \item Il testo $t$ viene inviato al plug-in Knoxly;
     \item $t$ viene innanzitutto analizzato con il \textit{Keyword module} utilizzando espressioni regolari e dizionari (codificati in Knoxly);
-    \item Le keyword in $t$ che hanno una corrispondenza con le espressioni regolari o con i dizionari vengono evidenziate con l'ausilio di un tag {\tt <span>} a cui è associata una opportuna classe {\tt .css} (\textit{giallo} per i quasi identifier~\cite{} e dati sensibili, \textit{rosso} per i dati personali). Si fornisce inoltre la possibilità di anonimizzare le keyword segnalate utilizzando la k-anonimity~\cite{} (qui termina l' analisi lessicale);
+    \item Le keyword in $t$ che hanno una corrispondenza con le espressioni regolari o con i dizionari vengono evidenziate con l'ausilio di un tag {\tt <span>} a cui è associata una opportuna classe {\tt .css} (\textit{giallo} per i quasi identifier~\cite{quasiID} e dati sensibili, \textit{rosso} per i dati personali). Si fornisce inoltre la possibilità di anonimizzare le keyword segnalate utilizzando la k-anonimity~\cite{kAnonimity} (qui termina l' analisi lessicale);
     \item Knoxly invia $t$ al server Flask\footnote{https://flask.palletsprojects.com/en/1.1.x/} il quale effettua l'embedding della frase tramite l'embedding module (basato su multilingual Universal Sentence Encoder), dopidichè invia l'embed al \textit{Topic module} ed al \textit{Sensitiveness module}. Il Topic module, basato sul Topic classifier, stabilisce a quale topic appartiene $t$. In base a questo si richiama l'opportuno \textit{Sensitiveness Classifier} nel \textit{Sensitiveness module}. Quest'ultimo restituisce un vettore di due elementi (sensibilità negativa e sensibilità positiva), percentuale delle classi,  il quale, insieme all'embed verranno restituiti al client-side.
     \item Il server invia al client un vettore di 514 elementi ovvero l'embed (512 elementi) con accodatio il vettore della probabilità delle classi (2 elementi) restituito dal \textit{Sensitiveness module}. Questa risposta viene elaborata dal \textit{Customized sensitiveness module}, il quale (a) la smista al \textit{Customized Sensitiveness classifier} adatto a quel topic, (b) valuta se il contenuto risulta sensibile secondo la percezione della privacy che ha l'utente.
     \item Se il \textit{Customized Sensitiveness classifier} classifica il contenuto restituitogli dal server come sensibile, cioè un contenuto che rappresenta una minaccia alla privacy dell'utente, allora lo segnala all'utente incrementando un contatore numerico posto in un badge dell'icona di Knoxly in Google Chrome, oltre ad aggiungerlo in una list box - progettata per fornire awareness - consultabile aprendo il popup del tool.
