--- a/indice.tex
+++ b/indice.tex
@@ -155,6 +155,7 @@
 \input{Capitolo7.tex}
 
 \chapter*{Appendice}
+\label{ch:appendix}
 \setlength{\headheight}{17pt}
 \rhead{}
 \fancyhead[L]{\rightmark}
